# multi-agent-code-reviewer

./: .env.example  .gitignore  README.md  demo_bad.py  main.py  pyproject.toml
data/: reviews.db
data/knowledge_base/: code_quality_best_practices.md  performance_best_practices.md  security_best_practices.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentAvatar.tsx  CodeViewer.tsx  FindingCard.tsx  ScoreBadge.tsx
frontend/src/pages/: HomePage.tsx  ReviewPage.tsx
frontend/src/types/: index.ts
src/: cli.py
src/agents/: base_agent.py  orchestrator.py  performance_agent.py  quality_agent.py  security_agent.py
src/api/: main.py  routes.py
src/graph/: nodes.py  workflow.py
src/models/: db.py  schemas.py
src/rag/: codebase_indexer.py  knowledge_base.py
src/tools/: analyzers.py  code_parser.py
tests/: rebuild_test_mock.py  test_agents.py  test_workflow.py
